# monitor

./: .gitignore  set_domain.sh
alloy/: docker-compose.yaml
alloy/data/alloy/: config.alloy
aruba-ap-exporter/: Dockerfile  docker-compose.yml  pyproject.toml
aruba-ap-exporter/src/: central.py  central_clients.py
grafana/: docker-compose.yml
grafana/data/provisioning/dashboards/: alert.yaml
grafana/data/provisioning/dashboards/json/: palo_log.json  sf_alert.json  sf_temperature.json  sf_traffic.json
grafana/data/provisioning/datasources/: aruba_as.yml  nav_api_aas.yaml  nav_api_frogn.yaml  nav_api_vestby.yaml  nav_graphite.yaml  palo_log.yml  prometheus.yml
graylog/: docker-compose.yml
influxdb/: docker-compose.yaml
loki/: docker-compose.yml
loki/data/loki/: loki-config.yml
loki/data/promtail/: promtail-config.yml
palo-logparser/: docker-compose.yml
prometheus/: docker-compose.yml
prometheus/data/: prometheus.yml
semaphore/: docker-compose.yml
syslogng/: docker-compose.yml
syslogng/data/: syslog-ng.conf
telegraf/: docker-compose.yml
telegraf/data/: docker.conf  hardware.conf  influxdb.conf  ping.conf  prometheus.conf  snmp.conf  telegraf.conf
traefik/: docker-compose.yml
traefik/data/configuration/: middlewares.yml
traefik/data/users/: users
upsmanager/: docker-compose.yml
whoami/: docker-compose.yml
